<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for selecting a flavor -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlavorFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />
        <variable
            name="flavorFragment"
            type="com.example.cupcake.FlavorFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <ImageView
                android:id="@+id/image_cupcake"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:importantForAccessibility="no"
                android:scaleType="center"
                app:srcCompat="@drawable/cupcake"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/order_cupcakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/side_margin"
                android:text="@string/order_cupcakes"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/material_on_background_emphasis_medium"
                app:layout_constraintTop_toBottomOf="@id/image_cupcake"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!--Vanilla Spinner -->
            <Spinner
                android:id="@+id/vanilla_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_cupcakes"
                android:layout_marginTop="@dimen/side_margin"
                android:onItemSelected="@{(parent, view, position, id) -> viewModel.setFlavorAndQuantity(@string/vanilla, position)}"
                android:selectedItemPosition="@{viewModel.flavor.get(@string/vanilla)}"/>

            <TextView
                android:id="@+id/vanilla"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintStart_toEndOf="@id/vanilla_spinner"
                app:layout_constraintTop_toBottomOf="@id/order_cupcakes"
                tools:text="Vanilla"
                android:text="@string/vanilla"/>

            <!--Chocolate Spinner-->
            <Spinner
                android:id="@+id/chocolate_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vanilla_spinner"
                android:layout_marginTop="@dimen/side_margin"
                android:onItemSelected="@{(parent, view, position, id) -> viewModel.setFlavorAndQuantity(@string/chocolate, position)}"
                android:selectedItemPosition="@{viewModel.flavor.get(@string/chocolate)}"/>

            <TextView
                android:id="@+id/chocolate"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintStart_toEndOf="@id/chocolate_spinner"
                app:layout_constraintTop_toBottomOf="@id/vanilla"
                tools:text="Chocolate"
                android:text="@string/chocolate"/>

            <!--Red Velvet Spinner-->
            <Spinner
                android:id="@+id/red_velvet_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chocolate_spinner"
                android:layout_marginTop="@dimen/side_margin"
                android:onItemSelected="@{(parent, view, position, id) -> viewModel.setFlavorAndQuantity(@string/red_velvet, position)}"
                android:selectedItemPosition="@{viewModel.flavor.get(@string/red_velvet)}"/>

            <TextView
                android:id="@+id/red_velvet"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintStart_toEndOf="@id/red_velvet_spinner"
                app:layout_constraintTop_toBottomOf="@id/chocolate"
                tools:text="Red Velvet"
                android:text="@string/red_velvet"/>

            <!--Salted Caramel Spinner-->
            <Spinner
                android:id="@+id/salted_caramel_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/red_velvet_spinner"
                android:layout_marginTop="@dimen/side_margin"
                android:onItemSelected="@{(parent, view, position, id) -> viewModel.setFlavorAndQuantity(@string/salted_caramel, position)}"
                android:selectedItemPosition="@{viewModel.flavor.get(@string/salted_caramel)}"/>

            <TextView
                android:id="@+id/salted_caramel"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintStart_toEndOf="@id/salted_caramel_spinner"
                app:layout_constraintTop_toBottomOf="@id/red_velvet"
                tools:text="Salted Caramel"
                android:text="@string/salted_caramel"/>

            <!--Coffee Spinner-->
            <Spinner
                android:id="@+id/coffee_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/salted_caramel_spinner"
                android:layout_marginTop="@dimen/side_margin"
                android:onItemSelected="@{(parent, view, position, id) -> viewModel.setFlavorAndQuantity(@string/coffee, position)}"
                android:selectedItemPosition="@{viewModel.flavor.get(@string/coffee)}"/>

            <TextView
                android:id="@+id/coffee"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintStart_toEndOf="@id/coffee_spinner"
                app:layout_constraintTop_toBottomOf="@id/salted_caramel"
                tools:text="Coffee"
                android:text="@string/coffee"/>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coffee" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00"
                android:text="@{@string/subtotal_price(viewModel.price)}"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_margin"
                android:text="@string/cancel"
                app:layout_constraintTop_toTopOf="@id/next_button"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick="@{() -> viewModel.resetOrder()}"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                android:onClick="@{() -> flavorFragment.goToNextScreen()}"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>