<?xml version="1.0" encoding="utf-8"?>

<!--Layout for entering user details-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserDetailsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />
        <variable
            name="userDetailsFragment"
            type="com.example.cupcake.UserDetailsFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/side_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                android:hint="@string/enter_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="@dimen/margin_between_elements">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.setUserName(text.toString())}"
                    android:text="@{viewModel.userName}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_phone"
                app:layout_constraintStart_toStartOf="@id/name_input"
                app:layout_constraintTop_toBottomOf="@id/name_input"
                android:layout_marginTop="@dimen/margin_between_elements">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.setUserPhone(text.toString())}"
                    android:text="@{viewModel.userPhone}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_input" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00"
                android:text="@{@string/subtotal_price(viewModel.price)}"/>


            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_margin"
                android:text="@string/cancel"
                app:layout_constraintTop_toTopOf="@id/next_button"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick="@{() -> userDetailsFragment.cancelOrder()}"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                android:onClick="@{() -> userDetailsFragment.goToNextScreen()}"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>